// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[4] SingleTodoItem completed = true matches snapshot from 5.29.22 1`] = `
<li
  className="sc-eCYdqJ hJzPOU"
>
  <input
    data-testid="todo-checkbox"
    defaultChecked={true}
    onClick={[Function]}
    type="checkbox"
  />
  <h4>
    Fake Todo Name Complete
  </h4>
  <button
    className="sc-hKMtZM fLGsmg"
    onClick={[Function]}
  >
    Delete
  </button>
</li>
`;

exports[`[5] SingleTodoItem completed = false matches snapshot from 5.29.22 1`] = `
<li
  className="sc-eCYdqJ hJzPOU"
>
  <input
    data-testid="todo-checkbox"
    defaultChecked={true}
    onClick={[Function]}
    type="checkbox"
  />
  <h4>
    Fake Todo Name Incomplete
  </h4>
  <button
    className="sc-hKMtZM fLGsmg"
    onClick={[Function]}
  >
    Delete
  </button>
</li>
`;
